@@ -195,3 +195,5 @@ INSERT INTO host_inventory SELECT * FROM t_host_inventory;
 DROP TABLE t_host_inventory;
 DROP TABLE hosts_profiles;
 DROP TABLE hosts_profiles_ext;
+
+DELETE FROM ids WHERE table_name IN ('hosts_profiles', 'hosts_profiles_ext');
