@@ -206,6 +206,8 @@ DROP SEQUENCE items_applications_seq;
 DROP SEQUENCE httptestitem_seq;
 DROP SEQUENCE items_seq;
 
+DELETE FROM ids WHERE table_name IN ('items', 'httptestitem', 'items_applications');
+
 ---- Patching table `hosts`
 
 ALTER TABLE ONLY hosts ALTER hostid DROP DEFAULT,
